coloring admitted and left

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=kM7yyd6jmd7x2dQEN4At1SkaRUxJfupowVg_BV7VJAcK0lcuLEdOP6thS8zTApqDXG_nJC_9MId7ZC1eFLvcJmQ25J3aJn5rxlCgoYNAFRg" charset="UTF-8"></script><base href="/"> -->
 <!-- <div id="app">
     <nav class="navbar navbar-expand navbar-dark bg-dark">
       <a href="#" class="navbar-brand">bezKoder</a>
