--- a/src/app/modules/photogallery/photobrowser/photobrowser.component.html
+++ b/src/app/modules/photogallery/photobrowser/photobrowser.component.html
@@ -28,7 +28,7 @@
             <!-- </div> -->
           </div>
         </div>
-        <div fxLayout="row">
+        <div fxLayout="row" fxLayoutAlign="center center">
           <span style="color:white;padding:5px"> {{album.UpdatedFileFolderName|slice:0:30}}</span><span
             *ngIf="album.UpdatedFileFolderName.length>30">...</span>
         </div>
