--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
 <mat-divider></mat-divider>
-<footer class="bottom">
+<footer class="bottom" fxLayout="row" fxLayoutAlign="space-around center">
     ST. PAUL'S INSTITUTE &copy; 2011 - 2021 | New Lamka, Churachandpur, Manipur, India.     
 </footer>
