--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -22,7 +22,7 @@
     }
 
     mat-drawer-container {
-        background-color:#00203FFF;//#0e4a8b;// #0F5298;
+        background-color:#00203F;//#0e4a8b;// #0F5298;
         //opacity: .5;
         //background:url('/assets/images/schoolbuilding2018.jfif') no-repeat 0 0 transparent;
     }
