--- a/src/app/modules/FeesManagement/Reports/today-collection/today-collection.component.html
+++ b/src/app/modules/FeesManagement/Reports/today-collection/today-collection.component.html
@@ -21,40 +21,20 @@
                 </button>
             </div>
         </form>
-        <div fxLayout="row" fxLayoutAlign="center center">
-            <span *ngIf="TotalAmount>0" style="padding: 10px;"><strong>Total &#x20b9;</strong>: {{TotalAmount}}
-            </span>
-            <span *ngIf="ErrorMessage.length>0">{{ErrorMessage}}</span>
-        </div>
-        <mat-table #table [dataSource]="dataSource" matSort>            
+
+        <mat-table #table [dataSource]="dataSource" matSort>
             <ng-container matColumnDef="SlNo">
                 <mat-header-cell *matHeaderCellDef> Sr.No. </mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.SlNo}} </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="ReceiptNo">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Receipt No. </mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.ReceiptNo}} </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="Name">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Student </mat-header-cell>
+            <ng-container matColumnDef="FeeName">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Fee </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    {{element.Name}}
-                </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="ClassNameSection">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Class </mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    {{element.ClassNameSection}}
-                </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="RollNo">
-                <mat-header-cell *matHeaderCellDef> Roll No. </mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    {{element.RollNo}}
+                    {{element.FeeName}}
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="TotalAmount">
-                <mat-header-cell *matHeaderCellDef> Amount &#x20b9;</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Amount &#x20b9;</mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     {{element.TotalAmount}}
                 </mat-cell>
@@ -63,6 +43,15 @@
             <mat-row *matRowDef="let row; columns: DisplayColumns;" fxLayoutAlign="space-between center" fxLayout="row">
             </mat-row>
         </mat-table>
+        <div fxLayout="column" fxLayoutAlign="end center">
+            <span *ngIf="GrandTotalAmount>0" style="padding: 30px;"><strong>Total &#x20b9;</strong>:
+                {{GrandTotalAmount}}
+            </span>
+            
+            <span *ngIf="ErrorMessage.length>0">{{ErrorMessage}}</span>
+        </div>
+        <hr style="color:lightgrey;width:50%">
+           
         <mat-paginator [pageSizeOptions]="[10,25,100]">
         </mat-paginator>
     </mat-card-content>
