--- a/src/app/modules/contact/addMessage/contact.component.scss
+++ b/src/app/modules/contact/addMessage/contact.component.scss
@@ -3,17 +3,18 @@
     width: 100%;
     //margin-top: 0px;
 }
-::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
-    background-color: white;
-    //border-color: white;
-    outline: white;
-    border-radius: 5px;
-  }
+// ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+//     background-color: white;
+//     color:black;
+//     //border-color: white;
+//     //outline: white;
+//     border-radius: 5px;
+//   }
 mat-card{
     margin-left: 10px;
     //margin-top: 0px;
-    background-color: #1E4A75;// #20639b;
-    color:white;
+    //background-color: lightgray;// #20639b;
+    //color:white;
     border-radius: 1em;
 }
 .container{
@@ -24,3 +25,6 @@ mat-card{
     display: flex;
     margin: 10px;
 }
+// mat-hint{
+//     color:white;
+// }
