--- a/src/app/modules/define-pages/displaypage/displaypage.component.scss
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.scss
@@ -1,18 +1,77 @@
-:host{
-    width: 100%;
+:host {
+    width       : 100%;
     //margin-top:50px;
 }
-mat-card-subtitle{
-    color:orange;
+
+mat-card-subtitle {
+    color: orange;
 }
-.contentbody{
-    border-radius: 1em;
-    margin-top: 9px;
-    padding: 25px;
-    background-color:#1E4A75;//#20639b;
+
+.contentbody {
+    border-radius   : 1em;
+    margin-top      : 9px;
+    //padding: 25px;
+    background-color: #1E4A75; //#20639b;
     // background: url('/assets/images/schoolbuilding2018.jfif' );    
     //opacity: 0.9;
     // z-index: 100;
-    color:#fafafa;
-//    width: 100%;
+    color           : #fafafa;
+    //    width: 100%;
+}
+
+.container {
+    position : relative;
+    max-width: 100%;
+    margin   : 0px;
+    padding  : 0px;
+    height   : auto;
+}
+
+.container img {
+    vertical-align: middle;
+}
+
+.content {
+    //position: absolute;
+    margin-top: -100px;
+}
+
+@media only screen and (max-width: 600px) {
+    .content {
+        position  : relative;
+        bottom    : 0;
+        background: rgb(0, 0, 0);
+        /* Fallback color */
+        background: rgba(0, 0, 0, 0.5);
+        /* Black background with 0.5 opacity */
+        color     : #f1f1f1;
+        width     : 100%;
+        height    : 50%;
+        margin-top: -50px;
+        padding   : 30px;
+    }
+
+    // .container {
+    //     padding: 30px;
+    // }
+}
+
+@media only screen and (min-width: 600px) {
+    .container .content {
+        position  : relative;
+        bottom    : 0;
+        background: rgb(0, 0, 0);
+        /* Fallback color */
+        background: rgba(0, 0, 0, 0.5);
+        /* Black background with 0.5 opacity */
+        color     : #f1f1f1;
+        width     : 100%;
+        height    : 50%;
+        padding   : 50px;
+    }
+}
+
+.mat-card>:first-child,
+.mat-card-content>:first-child {
+    margin-top: 15px;
 }
