--- a/src/app/modules/photogallery/photobrowser/photobrowser.component.scss
+++ b/src/app/modules/photogallery/photobrowser/photobrowser.component.scss
@@ -15,11 +15,12 @@ span:hover{
 mat-card{
     background-color: #1E4A75;
     padding: 30px;
+    
  
 }
 .whole{
     margin-bottom: 25px !important;
-    background-color:#3889D9;
+    background-color: rgb(0,83,166);//rgb(00,20,3f, .5);// #00203F ;
     border-radius: 5px;
 }
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
