--- a/src/app/shared/components/landingpage/landingpage.component.html
+++ b/src/app/shared/components/landingpage/landingpage.component.html
@@ -5,12 +5,34 @@
 </div>
 <div class="footer">
 </div> -->
+<!-- <div class="container" fxLayout="row" fxLayoutAlign="center center"> -->
+    <div class="content" fxLayout="column">
+        <div style="margin-top: 80px;margin-bottom: 10px;">
+            <img src="assets/images/stpaulslogo.png" width="130px">
+        </div>
+        <span class="name">St. Paul's Institute</span>
+        <div class="enter">
+            <button (click)="home()" class="button buttonon">ENTER</button>
+        </div>
+        <div>
+            <!-- <img src="../../../../assets/images/school.png" width="100%" height="375px" style="margin-bottom: 0px;"> -->
 
-<div class="content">
-    <div style="height:100px">
-           
+        </div>
     </div>
-    <div fxLayoutAlign="center center" fxLayout="row">            
-        <!-- <img (click)="home()" src="../../../../assets/images/schoolbuilding2018.jfif" class="imgcls">     -->
+<!-- </div> -->
+<!-- <div class="container">
+    <div class="left"></div>
+    <div class="center">
+        <div class="content">
+            <ul class="logo"><img width="130px" src="../../../../assets/images/stpaulslogo.png"></ul>
+            <ul class="name">
+                <p>St. Paul's Institute
+            </ul>
+        </div>
+        <div class="enter">
+            <a href=" "><button class="button buttonon">ENTER</button></a>
+        </div>
+        <div class="school"><img src="../../../../assets/images/school.png"></div>
     </div>
-</div>
+    <div class="right"></div>
+</div> -->
