--- a/src/app/modules/define-pages/displaypage/displaypage.component.scss
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.scss
@@ -4,12 +4,12 @@
 }
 
 mat-card-subtitle {
-    color: orange;
+    color: rgb(201, 200, 200,.9);
 }
 
 .contentbody {
     border-radius   : 1em;
-    margin-top      : 9px;
+    margin-top      : 16px;
     //padding: 25px;
     background-color: #1E4A75; //#20639b;
     // background: url('/assets/images/schoolbuilding2018.jfif' );    
