--- a/src/app/modules/define-pages/pageDashboard/pageDashboard.component.scss
+++ b/src/app/modules/define-pages/pageDashboard/pageDashboard.component.scss
@@ -3,7 +3,11 @@
 }
 mat-card{
   border-radius: 1rem;
-//  background-color: lightblue;
+  background-color: rgb(255, 255, 255,.9);
+  margin-top: 10px;
+}
+mat-table{
+  background-color: rgb(255, 255, 255,.9);
 }
 // table{
 //     width: 100%;
