--- a/src/app/modules/define-pages/texteditor/texteditor.component.scss
+++ b/src/app/modules/define-pages/texteditor/texteditor.component.scss
@@ -21,3 +21,8 @@ button{
 .row{
     margin: 2px;
 }
+mat-card{
+    background-color: rgb(255, 255, 255,.9);;// #20639b;
+    border-radius: 1em;
+    margin-top: 10px;
+}
