--- a/src/app/modules/files/filedrag-and-drop/filedrag-and-drop.component.scss
+++ b/src/app/modules/files/filedrag-and-drop/filedrag-and-drop.component.scss
@@ -5,3 +5,7 @@ mat-form-field{
     width:30% !important;
     //margin-right: 10px;
 }
+mat-card{
+    background-color: rgb(255,255,255,.9);
+    margin-top: 10px;
+}
