--- a/src/app/shared/components/notfound/notfound.component.html
+++ b/src/app/shared/components/notfound/notfound.component.html
@@ -1,5 +1,5 @@
 <p>Page not found!</p>
 <br>
 <button class="mat-raised-button" (click)="home()" matTooltip="home">
-    <mat-icon>home</mat-icon>
+    <!-- <mat-icon>home</mat-icon> -->
 </button>
