--- a/src/app/shared/components/right/right.component.scss
+++ b/src/app/shared/components/right/right.component.scss
@@ -2,7 +2,7 @@
 //     margin-top: 5px;
 // }
 .content{
-    background-color:#1E4A75;// #20639b;
+   // background-color:#1E4A75;// #20639b;
     //opacity: 0.9;
     width: 280px;
     margin-top: 8px;
