--- a/src/app/modules/FeesManagement/classfee/dashboardclassfee/dashboardclassfee.component.html
+++ b/src/app/modules/FeesManagement/classfee/dashboardclassfee/dashboardclassfee.component.html
@@ -34,8 +34,8 @@
             </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Batch</mat-label>
-                <mat-select formControlName="Batch">
-                    <mat-option value="0">---</mat-option>
+                <mat-select formControlName="Batch" (selectionChange)="UpdateSelectedBatchId($event.value)">
+                    <!-- <mat-option value="0">--select--</mat-option> -->
                     <mat-option *ngFor="let p of Batches" [value]="p.MasterDataId">
                         {{p.MasterDataName}}
                     </mat-option>
