--- a/src/app/modules/contact/addMessage/contact.component.scss
+++ b/src/app/modules/contact/addMessage/contact.component.scss
@@ -12,8 +12,8 @@
 //   }
 mat-card{
     margin-left: 10px;
-    //margin-top: 0px;
-    //background-color: lightgray;// #20639b;
+    margin-top: 10px;
+    background-color: rgb(255, 255, 255,.9);;// #20639b;
     //color:white;
     border-radius: 1em;
 }
@@ -25,6 +25,7 @@ mat-card{
     display: flex;
     margin: 10px;
 }
-// mat-hint{
-//     color:white;
-// }
+.mat-card>:first-child,
+.mat-card-content>:first-child {
+    margin-top: 15px;
+}
