--- a/src/app/modules/contact/contactdashboard/contactdashboard.component.scss
+++ b/src/app/modules/contact/contactdashboard/contactdashboard.component.scss
@@ -2,8 +2,8 @@
   width:78%;
 }
 mat-card{
-
-    height: 100%;
+  background-color: rgb(255,255,255,.9);
+  margin-top: 10px;
 }
 table{
     width: 100%;
