--- a/src/app/modules/photogallery/albums/albums.component.scss
+++ b/src/app/modules/photogallery/albums/albums.component.scss
@@ -5,6 +5,10 @@
     border: 1px thin gray;
     //border-color:gray;
 }
+mat-card{
+    background-color: rgb(255,255,255,.9);
+    margin-top: 10px;
+}
 app-edit-input{
     display: inline-block;
     vertical-align:baseline;
