--- a/src/app/modules/photogallery/photobrowser/photobrowser.component.scss
+++ b/src/app/modules/photogallery/photobrowser/photobrowser.component.scss
@@ -3,6 +3,12 @@
   }
 .dynamicimgborder{
     //border:1px solid white;
+    margin: 3px;
+    margin-bottom: 5px;
+}
+.dynamicimgborderM{
+    //border:1px solid white;
+    margin: 3px;
     margin-bottom: 5px;
 }
 span:hover{   
@@ -15,12 +21,12 @@ span:hover{
 mat-card{
     background-color: #1E4A75;
     padding: 30px;
-    
+    margin-top: 10px;    
  
 }
 .whole{
     margin-bottom: 25px !important;
-    background-color: rgb(0,83,166);//rgb(00,20,3f, .5);// #00203F ;
+    background-color: rgb(0,0,0,.3);//rgb(00,20,3f, .5);// #00203F ;
     border-radius: 5px;
 }
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
