--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,18 +1,19 @@
 <!-- <mat-toolbar [ngClass]="{'width81':!deviceXs,'width100':deviceXs}"> -->
 <mat-toolbar class="width100">
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
-        <div>
+        <div fxLayout="row wrap" fxLayoutAlign="start center">           
             <button mat-button (click)="toggleSideBar()">
                 <mat-icon>menu</mat-icon>
-                <!-- <mat-icon *ngIf="toggle">chevron_right</mat-icon> -->
-                <!-- <mat-icon *ngIf="!toggle">chevron_left</mat-icon> -->
             </button>
             <button mat-button>
                 <a [routerLink]="[ '/home/display/0/0/']"><img src="assets/images/stpaulslogo.png" alt="St Paul's Institute"
                         width="110px" /></a>
             </button>
-            <span *ngIf="!deviceXs"><strong>ST. PAUL'S INSTITUTE</strong></span>
+            <div fxHide.xs fxLayout="row" fxLayoutAlign="space-between center">              
+                <span><strong>ST. PAUL'S INSTITUTE</strong></span>
+            </div>
         </div>
+        
         <div>
             <div fxLayout="row" fxLayoutAlign="space-around end"><span style="height: 40px;">&nbsp;</span></div>
             <div fxLayout="row" fxLayoutAlign="space-around end" *ngIf="!deviceXs">
@@ -26,7 +27,7 @@
                     <mat-icon>contact_support</mat-icon><span>Contact Us</span>
                 </button>
             </span>
-            <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="login">
+            <button fxHide.xs mat-icon-button [matMenuTriggerFor]="menu" matTooltip="login">
                 <mat-icon *ngIf="deviceXs">more_vert</mat-icon>
                 <mat-icon *ngIf="!deviceXs">account_circle</mat-icon>
             </button>
@@ -46,65 +47,20 @@
             </mat-menu>
         </div>
     </mat-toolbar-row>
-    <mat-toolbar-row *ngIf="deviceXs" style="height: 20px;box-shadow: 3px 3px 3px #00203F;" fxLayoutAlign="space-between center">
+    <mat-toolbar-row fxShow.gt-xs fxHide.gt-xs style="height: 70px !important;box-shadow: 3px 3px 3px #00203F;"
+     fxLayout="row wrap" fxLayoutAlign="space-between center">
+        <div style="padding-left: 70px;padding-bottom: 10px;" fxLayout="row" fxLayoutAlign="center center">             
+           
+            <!-- <button mat-button (click)="toggleSideBar()">
+                <mat-icon>menu</mat-icon>
+            </button> -->
+            <span><strong>ST. PAUL'S INSTITUTE</strong></span>            
+        </div>
         <button mat-button (click)="newsNEvents()">
             <mat-icon>announcement</mat-icon><span style="color: white;">News & Events</span>
         </button>
-        <!-- <button mat-button>
-            <mat-icon>info</mat-icon>About Us
-        </button> -->
         <button mat-button (click)="contactus()">
             <mat-icon>contact_support</mat-icon><span>Contact Us</span>
         </button>
     </mat-toolbar-row>
 </mat-toolbar>
-<!-- <mat-toolbar class="top">
-    <mat-toolbar-row fxLayoutAlign="space-between end">
-        <div class="item">
-            <button mat-button (click)="toggleSideBar()">
-                <mat-icon *ngIf="toggle">chevron_right</mat-icon>
-                <mat-icon *ngIf="!toggle">chevron_left</mat-icon>
-            </button>
-            <button mat-button (click)="home()">
-                <span *ngIf="deviceXs" style="color:white">ST. PAUL'S INSTITUTE</span>
-            </button>
-        </div>
-        <div class="trainup" style="font-size: medium;height: 45px;">Train up a child in the way he should go. -
-            Proverbs 22:16</div>
-        <div class="rightside">
-            <span>&nbsp;&nbsp;&nbsp;</span>
-            <span style="font-size: small;" *ngIf="userName.length>0"> Hello,
-                {{userName}}</span>
-
-            <button mat-button (click)="newsNEvents()">
-                <mat-icon>announcement</mat-icon><span style="color: white;">News & Events</span>
-            </button>
-            <button mat-button [matMenuTriggerFor]="contact">
-                <mat-icon>contact_support</mat-icon>
-            </button>
-            <mat-menu #contact="matMenu">
-                <button mat-menu-item (click)="contactus()">
-                    <mat-icon>login</mat-icon>Contact Us
-                </button>
-            </mat-menu>
-            <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="login">
-                <mat-icon>account_circle</mat-icon>
-            </button>
-            <mat-menu #menu="matMenu">
-                <button mat-menu-item *ngIf="!loggedIn" (click)="gotoLogin()">
-                    <mat-icon>login</mat-icon>login
-                </button>
-                <button mat-menu-item *ngIf="loggedIn" (click)="createlogin()">
-                    <mat-icon>create</mat-icon>Create login
-                </button>
-                <button mat-menu-item *ngIf="loggedIn" (click)="changepassword()">
-                    <mat-icon>change_circle</mat-icon>Change password
-                </button>
-                <button mat-menu-item *ngIf="loggedIn" (click)="logout()">
-                    <mat-icon>logout</mat-icon>logout
-                </button>
-            </mat-menu>
-        </div>
-    
-    </mat-toolbar-row>
-</mat-toolbar> -->
