--- a/src/app/shared/components/landingpage/landingpage.component.html
+++ b/src/app/shared/components/landingpage/landingpage.component.html
@@ -1,38 +1,15 @@
-<!-- <div class="header">
-</div>
-<div fxLayout="row" fxLayoutAlign="center center" class="content">
-       <div class="image-cropper"> <img src="../../../../assets/images/schoolbuilding2018.jfif"></div>
-</div>
-<div class="footer">
-</div> -->
-<!-- <div class="container" fxLayout="row" fxLayoutAlign="center center"> -->
-    <div class="content" fxLayout="column">
-        <div style="margin-top: 80px;margin-bottom: 10px;">
-            <img src="assets/images/stpaulslogo.png" width="130px">
-        </div>
-        <span class="name">St. Paul's Institute</span>
-        <div class="enter">
-            <button (click)="home()" class="button buttonon">ENTER</button>
-        </div>
-        <div>
-            <!-- <img src="../../../../assets/images/school.png" width="100%" height="375px" style="margin-bottom: 0px;"> -->
+<div class="content" fxLayout="row" fxLayoutAlign="center center">
+    <div style="height: 150px;">
+      
+    </div>
+    <div style="margin-bottom: 20px;">
+        <img src="assets/images/stpaulslogo.png" width="130px">
+    </div>
+    <span class="name">St. Paul's Institute</span>
+    <div class="enter">
+        <button (click)="home()" class="button buttonon">ENTER</button>
+    </div>
+    
+        <!-- <img src="../../../../assets/images/schooltop.png" width="100%" style="margin-top: -100px;opacity: 1.2;"> -->
 
-        </div>
-    </div>
-<!-- </div> -->
-<!-- <div class="container">
-    <div class="left"></div>
-    <div class="center">
-        <div class="content">
-            <ul class="logo"><img width="130px" src="../../../../assets/images/stpaulslogo.png"></ul>
-            <ul class="name">
-                <p>St. Paul's Institute
-            </ul>
-        </div>
-        <div class="enter">
-            <a href=" "><button class="button buttonon">ENTER</button></a>
-        </div>
-        <div class="school"><img src="../../../../assets/images/school.png"></div>
-    </div>
-    <div class="right"></div>
-</div> -->
+</div>
