--- a/src/app/shared/components/landingpage/landingpage.component.scss
+++ b/src/app/shared/components/landingpage/landingpage.component.scss
@@ -1,64 +1,41 @@
-body {
-//    height: 100%;
-    padding: 0;
-    margin : 0;
-}
 
-// .image-cropper {
-//     //width: 800px;
-//     height       : 450px;
-//     position     : relative;
-//     overflow     : hidden;
-//     border-radius: 50%;
-// }
-
-// .header {
-//     // background: url('../../../../assets/images/headerimg.svg');
-//     // background-size: cover;
-//     background-color: #00203FFF;
-//     height          : 20%;
-//     //border-color: honeydew;
+// body {
+//     //    height: 100%;
+//     padding: 0;
+//     margin : 0;
 // }
 
 .content {
-    background     : linear-gradient(150deg, #00203F 15%, #198CFF 70%, #006EDB 94%);
+    background: linear-gradient(150deg, #00203F 10%, #198CFF 70%, #006EDB 15%);
+    //background-image: url('../../../../assets/images/school.png') ;
+    //background-repeat:no-repeat;
+    //background-position: center;
     height         : 100%;
-    width:60%;
-    opacity        : 1.1;
-    text-align: center;
+    width          : 100%;
+    //opacity        : 1.1;
+    text-align     : center;
     //border-radius: 1em;
     z-index        : 999;
     border-collapse: collapse;
-    //padding   : 15% 0 10% 0;
-    //    border:1px solid black;
+    top            : 0px;
 }
+
 @media only screen and (max-width: 800px) {
-    .content{
-        width:100%;
-    } 
+    .content {
+        width: 100%;
+    }
 }
 
-// .imgcls {
-//     //max-height: 400px;
-//     height                    : 100%;
-//     width                     : auto;
-//     box-shadow                : 3px 3px 3px #00203F;
-//     margin-bottom             : 0px;
-//     padding-bottom            : 0px;
-//     object-fit                : cover;
-//     // border-top-left-radius: 1em;
-//     // border-top-right-radius: 1em;
 
-// }
-
-:host{
-    width:100%;
+:host {
+    width     : 100%;
 }
+
 .container {
-    float     : center;
+    float           : center;
     //width     : 100%;
-    height: 100%;
-    background-color:#00203F ;
+    height          : 100%;
+    background-color: #00203F;
     //background: #f4fbfe url("../../../../assets/images/lines.png") repeat;
 }
 
@@ -72,17 +49,11 @@ body {
     box-shadow      : 0px 0px 6px black inset;
 }
 
-// .content {
-    
 
-//     //padding   : 15% 0 10% 0;
-// }
-
-// .logo {
-//     display: inline-block;
-//     //width:100px;
-// }
-
+.logo {
+    padding-top   : 120px;
+    margin-bottom: 10px;
+}
 .name {
     font-family: Roboto, Arial;
     font-size  : 1.5em;
@@ -102,19 +73,12 @@ body {
 }
 
 .school {
-    margin-top:100px;
-    position:absolute;
+    margin-top     : 100px;
+    position       : absolute;
     //width : 100%;
     //margin-bottom: 0px;
-    clear : both;
+    clear          : both;
 }
-
-// .school>img {
-//     width     : 50%;
-//     object-fit: contain;
-//     position  : absolute;
-//     bottom    : 0;
-// }
 
 .button {
     border             : none;
